<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wa2c.android.medoly.plugin.action.lyricsscraper.activity.MainActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/openSearchButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/title_activity_search"
                android:drawableLeft="@drawable/ic_find"
                android:drawableStart="@drawable/ic_find" />

            <Button
                android:id="@+id/openCacheButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/title_activity_cache"
                android:drawableLeft="@drawable/ic_db"
                android:drawableStart="@drawable/ic_db"/>

            <Button
                android:id="@+id/openSitesButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/title_activity_site"
                android:drawableLeft="@drawable/ic_list"
                android:drawableStart="@drawable/ic_list"/>

            <Button
                android:id="@+id/openSettingsButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/title_activity_settings"
                android:drawableLeft="@drawable/ic_settings"
                android:drawableStart="@drawable/ic_settings" />

            <Button
                android:id="@+id/launchMedolyButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/label_button_launch_medoly" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>



